@@ -8,12 +8,7 @@ namespace GtkGL {
 	using System.Runtime.InteropServices;
 
 #region Autogenerated code
-	public  class GLArea : Gtk.DrawingArea {
-
-		~GLArea()
-		{
-			Dispose();
-		}
+	public class GLArea : Gtk.DrawingArea {
 
 		[Obsolete]
 		protected GLArea(GLib.GType gtype) : base(gtype) {}
@@ -54,7 +49,7 @@ namespace GtkGL {
 		[DllImport("libgtkglarea-win32-2.0-0.dll")]
 		static extern void gtk_gl_area_size(IntPtr raw, int width, int height);
 
-		public new void Size(int width, int height) {
+		public void Size(int width, int height) {
 			gtk_gl_area_size(Handle, width, height);
 		}
 
